--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-# Use Android Studio's JDK which supports the required Java version
-org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
+# org.gradle.java.home can be set in local.properties for developer machines.
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. For more details, visit
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
